# data/counterModel.go
@@ -7,11 +7,11 @@ import (
 )
 
 type CounterDocument struct {
-	Id        primitive.ObjectID `bson:"_id"`
-	Counter   int
-	Version   int
-	CreatedAt time.Time
-	UpdatedAt time.Time
+	Id        primitive.ObjectID `bson:"_id" example:"60c7c02ea38e3c3c4426c1bd"`
+	Counter   int                `example:"5"`
+	Version   int                `example:"2"`
+	CreatedAt time.Time          `example:"2022-02-30T12:00:00Z"`
+	UpdatedAt time.Time          `example:"2022-02-30T12:00:00Z"`
 }
 
 func NewCounterDocument() *CounterDocument {
