# handlers/counterHandler.go
@@ -8,8 +8,38 @@ import (
 )
 
 type CounterController struct {
-	Repository data.CounterRepository
-	Logger     *zap.Logger
+	Repository data.CounterRepository `container:"type"`
+	Logger     *zap.Logger            `container:"type"`
+}
+
+// GetByIdHandler Gets a counter by Id
+//
+//	@Summary	retrieves a counter by id from database
+//	@Tags		counter
+//	@Accept		json
+//	@Produce	json
+//
+//	@Param		id	path		string					true	"Counter ID"
+//
+//	@Success	200	{object}	data.CounterDocument	"Requested counter"
+//	@Failure	400	{object}	errors.HTTPError
+//	@Failure	404	{object}	errors.HTTPError	"Counter not found"
+//	@Router		/counter/{id} [get]
+func (controller *CounterController) GetByIdHandler(gc *gin.Context) {
+	resultChan := make(chan *data.CounterDocument)
+	errChan := make(chan error)
+
+	defer close(resultChan)
+	defer close(errChan)
+
+	go controller.Repository.GetById(gc, gc.Param("id"), resultChan, errChan)
+
+	select {
+	case foundCounter := <-resultChan:
+		gc.JSON(200, gin.H{"counter": foundCounter})
+	case err := <-errChan:
+		gc.JSON(400, err)
+	}
 }
 
 // CreateHandler Creates a counter object
@@ -18,7 +48,9 @@ type CounterController struct {
 //	@Tags		counter
 //	@Accept		json
 //	@Produce	json
-//	@Success	200	{string}	id	of	the	object
+//	@Success	200	{string}	id	"ID of the created counter object"
+//	@Failure	400	{object}	errors.HTTPError
+//	@Failure	404	{object}	errors.HTTPError	"Counter not found"
 //	@Router		/counter [post]
 func (controller *CounterController) CreateHandler(gc *gin.Context) {
 	resultChan := make(chan primitive.ObjectID)
@@ -31,8 +63,8 @@ func (controller *CounterController) CreateHandler(gc *gin.Context) {
 
 	select {
 	case resultID := <-resultChan:
-		gc.JSON(200, gin.H{"id": resultID.Hex()})
-	case <-errChan:
-		panic("Could not create a counter")
+		gc.JSON(200, gin.H{"id": resultID})
+	case err := <-errChan:
+		gc.JSON(400, err)
 	}
 }
